[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmcheck"
version = "0.2.1"
description = "Check if a model supports multimodal inputs and what modalities it handles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Hemanth HM", email = "hemanth.hm@gmail.com" }]
keywords = ["multimodal", "llm", "vision", "audio", "model-capabilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28", "rich>=13.0"]

[project.scripts]
mmcheck = "mmcheck.cli:main"

[project.urls]
Homepage = "https://github.com/nicedouble/mmcheck"
Repository = "https://github.com/nicedouble/mmcheck"
